PROTON-1466: proton-c mixing up links with names that are prefixes

Creating links where one link name is a prefix of the other, e.g. "xx" and
"xxyy" sometimes caused the links to be confused.